--- a/libraries/libraries/static/scss/components/blocks/_product-grid-block.scss
+++ b/libraries/libraries/static/scss/components/blocks/_product-grid-block.scss
@@ -74,6 +74,6 @@
         display: block;
         font-size: 16px;
         overflow: hidden;
-        text-overflow: ellipsis; /* number of lines to show */ /* fallback */
+        text-overflow: ellipsis; // number of lines to show, fallback
     }
 }
