--- a/libraries/libraries/static/scss/components/exhibits/_gallery.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_gallery.scss
@@ -35,7 +35,7 @@ img {
 
         // Audio "play" button
         &--audio {
-            background: rgba(black, .7);
+            background: rgba($black, .7);
             border-radius: 50%;
             fill: $white;
             height: 56px;
