--- a/libraries/libraries/static/scss/settings/_colors.scss
+++ b/libraries/libraries/static/scss/settings/_colors.scss
@@ -25,6 +25,7 @@ $turquoise: rgba(23, 191, 179, 1);
 
 // component colors
 $btn-hover-light-gray: rgb(35, 35, 35);
+$info-box-link-blue: #14C4FF;
 
 // these are copied from Portal & used to recreate its "cards" feature
 // see portal/static/styles/portal/sass/partials/_variables.scss
