--- a/libraries/libraries/static/summon/scss/_facets.scss
+++ b/libraries/libraries/static/summon/scss/_facets.scss
@@ -1,4 +1,4 @@
-// sass-lint:disable no-important,no-qualifying-elements
+// sass-lint:disable no-important
 // make left-side facets more obvious, #3
 // these styles copied from the base <a> style
 // this selector for the "narrow your search" filters
