--- a/libraries/libraries/static/summon/scss/summon.scss
+++ b/libraries/libraries/static/summon/scss/summon.scss
@@ -3,7 +3,7 @@
 @import 'facets';
 @import 'custom_panels';
 
-// sass-lint:disable no-important,no-qualifying-elements
+// sass-lint:disable no-important
 
 // main logo size/spacing on large screens
 div[size='large'] .logo {
