hotfix - specificity of home-info-box link color

--- a/libraries/libraries/static/scss/components/home/_home-info-box.scss
+++ b/libraries/libraries/static/scss/components/home/_home-info-box.scss
@@ -96,7 +96,9 @@
     letter-spacing: .04em;
     line-height: 20px;
 
-    a {
+    // the extra selectors are for specifity
+    // to override the `.rich-text a[href]` rule in components/misc/rich-text.scss
+    .rich-text a[href] {
         color: $info-box-link-blue;
     }
 
