remove Meyer library hours from several places
- the footer on every page
- the info box on the home page
- the table on the hours page

the Hours API should also be able to handle Meyer being deleted now
it is not hard-coded anywhere in the app

--- a/libraries/home/templates/home/home-info-box-times.html
+++ b/libraries/home/templates/home/home-info-box-times.html
@@ -24,7 +24,7 @@
 				Meyer (Oak)
 			</dt>
 			<dd class="home-info-box-times__timetable-times js-meyer">
-				{{ hours.Meyer|default:"closed" }}
+				closed permanently
 			</dd>
 		{% else %}
 			<i>Error retrieving hours data...</i><br>
