--- a/libraries/libraries/templates/components/footer/footer-sites.html
+++ b/libraries/libraries/templates/components/footer/footer-sites.html
@@ -17,8 +17,8 @@
 			<p class="footer-section__site-address">
 				<a href="tel:15105943658">510.594.3658</a>
 			</p>
-			<p class="footer-section__site-address js-meyer-hrs">
-				{# JS fills in hours here #}
+			<p class="footer-section__site-address">
+				<i>closed permanently</i>
 			</p>
 		</li>
 		<li class="footer-section__site">
