add preconnect for google storage domain, closes #34

--- a/libraries/exhibitions/templates/components/head.html
+++ b/libraries/exhibitions/templates/components/head.html
@@ -1,4 +1,5 @@
 {% load static from staticfiles %}
+<link rel="preconnect" href="https://storage.googleapis.com">
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <title>
