--- a/libraries/libraries/templates/components/head/head.html
+++ b/libraries/libraries/templates/components/head/head.html
@@ -1,5 +1,5 @@
 {% load static from staticfiles %}
-
+<link rel="preconnect" href="https://storage.googleapis.com">
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <title>{% block title %}{% if self.seo_title %}{{ self.seo_title }}{% elif search_query %}Search: {{search_query|striptags|truncatechars:32}}{% else %}{{ page.title }}{% endif %}{% endblock %} | CCA Libraries</title>
