--- a/libraries/exhibitions/templates/components/artwork-embed.html
+++ b/libraries/exhibitions/templates/components/artwork-embed.html
@@ -7,7 +7,7 @@
     <div class="gallery--work__html">
         {% if work.image %}
             {% include 'components/ytp-btn.html' %}
-            {% image work.image max-630x630 %}
+            {% image work.image max-630x630 loading="lazy"  %}
 
         {% comment %}
         for YouTube we can find a thumbnail, not possible for Vimeo without an API call
@@ -17,7 +17,7 @@
             <img src="https://i3.ytimg.com/vi/{{ work.embed_code | cut:'https://www.youtube.com/watch?v=' }}/0.jpg" alt="{{ work.title }}">
 
         {% else %}
-            <iframe class="responsive-embed" width="560" height="315" src="{{ work.embed_code }}" frameborder="0" allow="encrypted-media" allowfullscreen></iframe>
+            <iframe class="responsive-embed" width="560" height="315" src="{{ work.embed_code }}" frameborder="0" allow="encrypted-media" allowfullscreen loading="lazy"></iframe>
         {% endif %}
     </div>
 {% endif %}
