--- a/libraries/libraries/static/scss/fonts/_cca-fonts.scss
+++ b/libraries/libraries/static/scss/fonts/_cca-fonts.scss
@@ -6,36 +6,40 @@
     font-display: fallback;
     font-family: 'Brown';
     src: url('/static/fonts/lineto-brown-regular.woff2') format('woff2'), url('/static/fonts/lineto-brown-regular.woff') format('woff');
+    font-display: swap;
 }
 @font-face {
     font-display: fallback;
     font-family: 'Brown';
     font-weight: bold;
     src: url('/static/fonts/lineto-brown-bold.woff2') format('woff2'), url('/static/fonts/lineto-brown-bold.woff') format('woff');
+    font-display: swap;
 }
 @font-face {
     font-display: fallback;
     font-family: 'Brown';
     font-style: italic;
     src: url('/static/fonts/lineto-brown-italic.woff2') format('woff2'), url('/static/fonts/lineto-brown-italic.woff') format('woff');
+    font-display: swap;
 }
 // The Serif font face
 @font-face {
     font-display: fallback;
     font-family: 'The Serif';
     src: url('/static/fonts/TheSerifB-W5Plain.otf') format('otf');
+    font-display: swap;
 }
-
 @font-face {
     font-display: fallback;
     font-family: 'The Serif';
     font-style: italic;
     src: url('/static/fonts/TheSerifB-W5PlainItalic.otf') format('otf');
+    font-display: swap;
 }
-
 @font-face {
     font-display: fallback;
     font-family: 'The Serif';
     font-weight: bold;
     src: url('/static/fonts/TheSerifB-W7Bold.otf') format('otf');
+    font-display: swap;
 }
