upgrade to Django==3.0.14
a few deprecated functions are basically name changes
biggest difference is that the staticfiles template tag no longer
exists; it's now just 'static'

--- a/libraries/categories/templates/categories/web_page_schema_org.html
+++ b/libraries/categories/templates/categories/web_page_schema_org.html
@@ -1,5 +1,5 @@
 {% load libraries_tags wagtailcore_tags wagtailimages_tags %}
-{% load static from staticfiles %}
+{% load static from static %}
 {% wagtail_site as current_site %}
 
 {# generic schema.org data which we should be able to use for most pages #}
