--- a/libraries/exhibitions/templates/components/header.html
+++ b/libraries/exhibitions/templates/components/header.html
@@ -1,5 +1,5 @@
 {% load alert_tags %}
-{% load static from staticfiles %}
+{% load static from static %}
 <header class="header js-header">
 	<div class="wrapper wrapper--header">
 		<a
