--- a/libraries/exhibitions/templates/exhibitions/exhibit-pagination.html
+++ b/libraries/exhibitions/templates/exhibitions/exhibit-pagination.html
@@ -1,5 +1,5 @@
 {% load wagtailcore_tags %}
-{% load static from staticfiles %}
+{% load static from static %}
 
 <div class="search-pagination">
 	{% if exhibits.has_previous %}
