--- a/libraries/exhibitions/templates/exhibitions/exhibit_page.html
+++ b/libraries/exhibitions/templates/exhibitions/exhibit_page.html
@@ -1,6 +1,6 @@
 {% extends "exhibits-base.html" %}
 {% load libraries_tags wagtailcore_tags wagtailimages_tags %}
-{% load static from staticfiles %}
+{% load static from static %}
 {% wagtail_site as current_site %}
 
 {% block body_class %}exhibit{% endblock %}
