--- a/libraries/libraries/templates/components/header/header.html
+++ b/libraries/libraries/templates/components/header/header.html
@@ -1,4 +1,4 @@
-{% load static from staticfiles %}
+{% load static from static %}
 <header class="header js-header">
 	<div class="wrapper wrapper--header">
 		<a
