--- a/libraries/staff/templates/staff/staff_member_schema_org.html
+++ b/libraries/staff/templates/staff/staff_member_schema_org.html
@@ -1,5 +1,5 @@
 {% load wagtailcore_tags %}
-{% load static from staticfiles %}
+{% load static from static %}
 {% wagtail_site as current_site %}
 <script type="application/ld+json">
 {
