--- a/libraries/home/templates/home/home_page.html
+++ b/libraries/home/templates/home/home_page.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load libraries_tags wagtailcore_tags wagtailimages_tags %}
-{% load static from staticfiles %}
+{% load static from static %}
 {% wagtail_site as current_site %}
 
 {% block schema_org %}
