--- a/libraries/hours/templates/hours/hours_page.html
+++ b/libraries/hours/templates/hours/hours_page.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load wagtailcore_tags wagtailimages_tags %}
-{% load static from staticfiles %}
+{% load static from static %}
 {% wagtail_site as current_site %}
 
 {% block content %}
