--- a/libraries/libraries/templates/base.html
+++ b/libraries/libraries/templates/base.html
@@ -1,5 +1,5 @@
 {% load alert_tags wagtailuserbar %}
-{% load static from staticfiles %}
+{% load static from static %}
 <!DOCTYPE html>
 <html class="no-js" lang="en">
     <head>
