--- a/libraries/libraries/templates/components/head/head.html
+++ b/libraries/libraries/templates/components/head/head.html
@@ -1,4 +1,4 @@
-{% load static from staticfiles %}
+{% load static from static %}
 <link rel="preconnect" href="https://storage.googleapis.com">
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
