--- a/libraries/libraries/static/scss/main.scss
+++ b/libraries/libraries/static/scss/main.scss
@@ -1,35 +1,35 @@
 // Boostrap Mixins
 // import them all as some as dependencies of other BS utilities
-@import 'bootstrap/mixins/alerts.scss';
-@import 'bootstrap/mixins/background-variant.scss';
-@import 'bootstrap/mixins/border-radius.scss';
-@import 'bootstrap/mixins/buttons.scss';
-@import 'bootstrap/mixins/center-block.scss';
-@import 'bootstrap/mixins/clearfix.scss';
-@import 'bootstrap/mixins/forms.scss';
-@import 'bootstrap/mixins/gradients.scss';
-@import 'bootstrap/mixins/grid-framework.scss';
-@import 'bootstrap/mixins/grid.scss';
-@import 'bootstrap/mixins/hide-text.scss';
-@import 'bootstrap/mixins/image.scss';
-@import 'bootstrap/mixins/labels.scss';
-@import 'bootstrap/mixins/list-group.scss';
-@import 'bootstrap/mixins/nav-divider.scss';
-@import 'bootstrap/mixins/nav-vertical-align.scss';
-@import 'bootstrap/mixins/opacity.scss';
-@import 'bootstrap/mixins/pagination.scss';
-@import 'bootstrap/mixins/panels.scss';
-@import 'bootstrap/mixins/progress-bar.scss';
-@import 'bootstrap/mixins/reset-filter.scss';
-@import 'bootstrap/mixins/reset-text.scss';
-@import 'bootstrap/mixins/resize.scss';
-@import 'bootstrap/mixins/responsive-visibility.scss';
-@import 'bootstrap/mixins/size.scss';
-@import 'bootstrap/mixins/tab-focus.scss';
-@import 'bootstrap/mixins/table-row.scss';
-@import 'bootstrap/mixins/text-emphasis.scss';
-@import 'bootstrap/mixins/text-overflow.scss';
-@import 'bootstrap/mixins/vendor-prefixes.scss';
+@import 'bootstrap/mixins/alerts';
+@import 'bootstrap/mixins/background-variant';
+@import 'bootstrap/mixins/border-radius';
+@import 'bootstrap/mixins/buttons';
+@import 'bootstrap/mixins/center-block';
+@import 'bootstrap/mixins/clearfix';
+@import 'bootstrap/mixins/forms';
+@import 'bootstrap/mixins/gradients';
+@import 'bootstrap/mixins/grid-framework';
+@import 'bootstrap/mixins/grid';
+@import 'bootstrap/mixins/hide-text';
+@import 'bootstrap/mixins/image';
+@import 'bootstrap/mixins/labels';
+@import 'bootstrap/mixins/list-group';
+@import 'bootstrap/mixins/nav-divider';
+@import 'bootstrap/mixins/nav-vertical-align';
+@import 'bootstrap/mixins/opacity';
+@import 'bootstrap/mixins/pagination';
+@import 'bootstrap/mixins/panels';
+@import 'bootstrap/mixins/progress-bar';
+@import 'bootstrap/mixins/reset-filter';
+@import 'bootstrap/mixins/reset-text';
+@import 'bootstrap/mixins/resize';
+@import 'bootstrap/mixins/responsive-visibility';
+@import 'bootstrap/mixins/size';
+@import 'bootstrap/mixins/tab-focus';
+@import 'bootstrap/mixins/table-row';
+@import 'bootstrap/mixins/text-emphasis';
+@import 'bootstrap/mixins/text-overflow';
+@import 'bootstrap/mixins/vendor-prefixes';
 
 // Fonts
 @import 'fonts/cca-fonts';
