adjust links in home info box, ref #26

--- a/libraries/libraries/static/scss/components/home/_home-info-box-links.scss
+++ b/libraries/libraries/static/scss/components/home/_home-info-box-links.scss
@@ -10,7 +10,8 @@
         color: $white;
     }
 
-    .btn {
-        margin-bottom: .8em;
+    // 2nd link if there are 2 links
+    &:nth-child(4) {
+        margin-top: .8em;
     }
 }
