--- a/libraries/home/templates/home/home-info-box.html
+++ b/libraries/home/templates/home/home-info-box.html
@@ -17,7 +17,7 @@
 		</div>
 		{% for block in page.services_link %}
 			<div class="home-info-box__link">
-				<span class="btn btn-primary btn-lg">
+				<span class="btn btn-primary">
 					{% include_block block %}
 				</span>
 			</div>
@@ -38,7 +38,7 @@
 		</div>
 		{% for block in page.collections_link %}
 			<div class="home-info-box__link">
-				<span class="btn btn-primary btn-lg">
+				<span class="btn btn-primary">
 					{% include_block block %}
 				</span>
 			</div>
@@ -59,7 +59,7 @@
 		</div>
 		{% for block in page.about_us_link %}
 			<div class="home-info-box__link">
-				<span class="btn btn-primary btn-lg">
+				<span class="btn btn-primary">
 					{% include_block block %}
 				</span>
 			</div>
