show Matlib in footer instead of Meyer

--- a/libraries/libraries/templates/components/footer/footer-sites.html
+++ b/libraries/libraries/templates/components/footer/footer-sites.html
@@ -6,23 +6,6 @@
 	<ul class="footer-section__sites">
 		<li class="footer-section__site">
 			<h5 class="footer-section__site-name">
-				Meyer Library
-			</h5>
-			<p class="footer-section__site-address">
-				Oakland
-			</p>
-			<p class="footer-section__site-address">
-				5212 Broadway
-			</p>
-			<p class="footer-section__site-address">
-				<a href="tel:15105943658">510.594.3658</a>
-			</p>
-			<p class="footer-section__site-address">
-				<i>closed permanently</i>
-			</p>
-		</li>
-		<li class="footer-section__site">
-			<h5 class="footer-section__site-name">
 				Simpson Library
 			</h5>
 			<p class="footer-section__site-address">
@@ -35,6 +18,26 @@
 				<a href="tel:14157039574">415.703.9574</a>
 			</p>
 			<p class="footer-section__site-address js-simpson-hrs">
+				{# JS fills in hours here #}
+			</p>
+		</li>
+		<li class="footer-section__site">
+			<h5 class="footer-section__site-name">
+				Materials Library
+			</h5>
+			<p class="footer-section__site-address">
+				San Francisco
+			</p>
+			<p class="footer-section__site-address">
+				1111 8th St
+			</p>
+			<p class="footer-section__site-address">
+				(2nd floor, between S-16 & LRC)
+			</p>
+			<p class="footer-section__site-address">
+				<a href="tel:15105943658">510.594.3658</a>
+			</p>
+			<p class="footer-section__site-address js-matlib-hrs">
 				{# JS fills in hours here #}
 			</p>
 		</li>
