update land acknowledgement in footer

--- a/libraries/libraries/templates/components/footer/footer.html
+++ b/libraries/libraries/templates/components/footer/footer.html
@@ -8,9 +8,7 @@
 		<div class="footer__land-acknowledgement">
             <hr>
             <p class="footer-section__text">
-              CCA campuses are located in Huichin and Yelamu, also known as
-			  Oakland and San Francisco, on the unceded territories of Chochenyo
-			  and Ramaytush Ohlone peoples.
+              CCA current and historical campuses are located in Huichin and Yelamu, also known as Oakland and San Francisco, on the unceded territories of Chochenyo and Ramaytush Ohlone peoples.
               <a href="https://www.cca.edu/about/indigenous-land-acknowledgement/"
 			     target="_blank" rel="noopener">Learn More
               </a>
