--- a/libraries/libraries/static/scss/components/exhibits/_main-navigation.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_main-navigation.scss
@@ -20,7 +20,7 @@
     border-bottom: 1px solid black(.1);
     color: $white;
     display: inline-block;
-    padding: 0 13px;
+    padding: 0 13px 3px;
     transition: border .3s ease;
 
     @include respond($break-medium) {
