rm Meyer from hours preview on About Us page

--- a/libraries/categories/templates/categories/category_page.html
+++ b/libraries/categories/templates/categories/category_page.html
@@ -28,16 +28,12 @@ fetch('/hours/?format=json')
         </thead>
         <tbody>
             <tr>
-                <td>Simpson (SF)</td>
+                <td>Simpson</td>
                 <td class="text-right">${data.Simpson}</td>
             </tr>
             <tr>
-                <td>Materials (SF)</td>
+                <td>Materials</td>
                 <td class="text-right">${data.Materials}</td>
-            </tr>
-            <tr>
-                <td>Meyer (Oak)</td>
-                <td class="text-right">${data.Meyer}</td>
             </tr>
         </tbody></table>`
         // replace the first RowComponent main_image (for "Hours" page)
