--- a/libraries/libraries/templates/components/ga.html
+++ b/libraries/libraries/templates/components/ga.html
@@ -1,18 +1,17 @@
 {# google analytics tracking code, only active on production #}
-<script>
 {% if not request.is_preview and request.META.HTTP_HOST == "libraries.cca.edu" %}
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-ga('create', 'UA-18459158-1', 'auto')
-ga('set', 'anonymizeIp', true)
-ga('set', 'forceSSL', true)
-ga('send', 'pageview')
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-24BVLMMGFM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-24BVLMMGFM', { anonymize_ip: true, forceSSL: true });
+</script>
 {% else %}
 {# for non-production sites, just log what would have been recorded #}
+<script>
 function ga() {
     console.log('google analytics:', arguments)
 }
-{% endif %}
 </script>
+{% endif %}
