add google site verification for Search Console

--- a/libraries/libraries/templates/components/head/head.html
+++ b/libraries/libraries/templates/components/head/head.html
@@ -19,3 +19,5 @@
 {% block extra_css %}
     {# Override this in templates to add extra stylesheets #}
 {% endblock %}
+
+<meta name="google-site-verification" content="ou3roRHL6QZ3VAbxRZBYWB9VIsbs_7Ij_UXoYjgafAs" />
