css improvement - anchor link offset to account for fixed header
closes #52

--- a/libraries/libraries/static/scss/main.scss
+++ b/libraries/libraries/static/scss/main.scss
@@ -119,6 +119,7 @@
 @import 'components/misc/link';
 @import 'components/misc/page';
 @import 'components/misc/rich-text';
+@import 'components/misc/target';
 @import 'components/misc/wrapper';
 @import 'components/button';
 
