mostly reformatting, make a few links HTTPS
also remove one redundant SCSS import

--- a/libraries/libraries/static/scss/main.scss
+++ b/libraries/libraries/static/scss/main.scss
@@ -1,5 +1,5 @@
 // Boostrap Mixins
-// import them all as some as dependencies of other BS utilities
+// import them all as some are dependencies of other BS utilities
 @import 'bootstrap/mixins/alerts';
 @import 'bootstrap/mixins/background-variant';
 @import 'bootstrap/mixins/border-radius';
@@ -110,7 +110,6 @@
 
 // -- Hours
 // Table styles borrowed from Bootstrap
-@import 'bootstrap/variables';
 @import 'bootstrap/tables';
 
 // -- Misc
