--- a/libraries/libraries/templates/components/footer/footer-info.html
+++ b/libraries/libraries/templates/components/footer/footer-info.html
@@ -25,7 +25,7 @@
 		>Libraries' news</a>
 		<a
 			class="footer-section__social-link newsletter"
-			href="http://eepurl.com/cmyLt9"
+			href="https://eepurl.com/cmyLt9"
 			title="CCA Libraries' news"
 		>Subscribe to our newsletter</a>
 	</div>
