--- a/libraries/libraries/templates/components/footer/footer-links.html
+++ b/libraries/libraries/templates/components/footer/footer-links.html
@@ -17,7 +17,7 @@
 		VAULT
 	</a>
 
-	<a href="http://moodle.cca.edu" title="Moodle is CCA's learning management system" class="footer-section__link">
+	<a href="https://moodle.cca.edu" title="Moodle is CCA's learning management system" class="footer-section__link">
 		Moodle
 	</a>
 
