--- a/libraries/libraries/templates/components/footer/footer-sites.html
+++ b/libraries/libraries/templates/components/footer/footer-sites.html
@@ -5,15 +5,9 @@
 
 	<ul class="footer-section__sites">
 		<li class="footer-section__site">
-			<h5 class="footer-section__site-name">
-				Simpson Library
-			</h5>
-			<p class="footer-section__site-address">
-				San Francisco
-			</p>
-			<p class="footer-section__site-address">
-				1111 8th St
-			</p>
+			<h5 class="footer-section__site-name">Simpson Library</h5>
+			<p class="footer-section__site-address">San Francisco</p>
+			<p class="footer-section__site-address">1111 8th St</p>
 			<p class="footer-section__site-address">
 				<a href="tel:14157039574">415.703.9574</a>
 			</p>
@@ -22,18 +16,10 @@
 			</p>
 		</li>
 		<li class="footer-section__site">
-			<h5 class="footer-section__site-name">
-				Materials Library
-			</h5>
-			<p class="footer-section__site-address">
-				San Francisco
-			</p>
-			<p class="footer-section__site-address">
-				1111 8th St
-			</p>
-			<p class="footer-section__site-address">
-				(2nd floor, between S-16 & LRC)
-			</p>
+			<h5 class="footer-section__site-name">Materials Library</h5>
+			<p class="footer-section__site-address">San Francisco</p>
+			<p class="footer-section__site-address">1111 8th St</p>
+			<p class="footer-section__site-address">(2nd floor, between S-16 & LRC)</p>
 			<p class="footer-section__site-address">
 				<a href="tel:14155519266">415.551.9266</a>
 			</p>
